Fixed Search label z-index

--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -19,6 +19,7 @@ h1 {
   box-sizing: content-box;
   padding-top: 5px;
   transition: all .5s ease;
+  z-index: 10;
 }
 .menu-bg{
   width: 100%;
